--- a/Tematy/T28b - ile dni do urodzin/index.html
+++ b/Tematy/T28b - ile dni do urodzin/index.html
@@ -14,7 +14,7 @@
     <hr>
     <section>
         <p>Napisz skrypt, który dla podanej daty urodzenia w postaci RRRR/MM/DD odpowiada ile dni pozostaje do jego urodzin.</p>
-        <label for="birthday">Data urodzin: </label><input type="date" id="birthday"><br><br>
+        <label for="birthday">Data urodzin: </label><input type="text" id="birthday"><br><br>
         <button>Działaj!</button>
     </section>
     <section>
