--- a/Tematy/T30b - szachownica/index.html
+++ b/Tematy/T30b - szachownica/index.html
@@ -13,9 +13,10 @@
     </div>
     <hr>
     <section>
-        <label for="n">Ile kolumn: </label><input type="number" id="n" value="5">
+        <label for="n">Ile kolumn: </label><input type="number" id="n" value="8"><br><br>
         <button>Działaj!</button>
     </section>
+    <section id="wynik"></section>
 </main>
 <script src="main.js"></script>
 </body>
