--- a/Tematy/T32c - zaprojektuj własne trampki/index.html
+++ b/Tematy/T32c - zaprojektuj własne trampki/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Formularz konkursu "Podrasuj swoje buty"</h1>
         <h5>Autor strony: <i>Fabian Latosiński 2P_1</i></h5>
-        <p>Chcesz zamienić swoje stare trampki na nową, zaprojektowaną przez siebie parę butów? Napisz nam, dlaczego powinienes pożegnać się ze swoimi wysłużonymi butami, a być może zostaniesz jednym z laureatów konkursu!</p>
+        <p>Chcesz zamienić swoje stare trampki na nową, zaprojektowaną przez siebie parę butów? Napisz nam, dlaczego powinieneś pożegnać się ze swoimi wysłużonymi butami, a być może zostaniesz jednym z laureatów konkursu!</p>
     </header>
     <hr>
     <section>
@@ -52,7 +52,6 @@
         <div id="ready">
             <button id="submit">Podrasuj swoje buty!</button>
         </div>
-        <h6 style="text-align: center">Wynik zostanie podany w konsoli</h6>
     </section>
     <section id="wynik" style="text-align: center"></section>
 </main>
