--- a/Egzaminy/E02JS - konfigurator stylów/konfigurator.html
+++ b/Egzaminy/E02JS - konfigurator stylów/konfigurator.html
@@ -18,7 +18,7 @@
                 <option value="plum">Plum</option>
             </select></p>
         <p>Podaj rozmiar czcionki w procentach, np. 200%<br><input type="number" id="font-size" value="100">%</p>
-        <p>Czy rysunek ma mieć ramkę?<br><input type="checkbox" id="border">Rysuj ramkę</p>
+        <p>Czy rysunek ma mieć ramkę?<br><input type="checkbox" id="border" checked="true">Rysuj ramkę</p>
         <p>Jaki jest typ punktora listy?<br><input type="radio" id="dysk" name="list-style">Dysk<br><input type="radio" id="kwadrat" name="list-style">Kwadrat<br><input type="radio" id="okrag" name="list-style">Okrąg</p>
     </div>
 
@@ -39,5 +39,6 @@
 <div id="stopka">
     Autor: Fabian Latosiński 2P_1
 </div>
+<script src="main.js"></script>
 </body>
 </html>
