--- a/Egzaminy/E02JS - konfigurator stylów/konfigurator.html
+++ b/Egzaminy/E02JS - konfigurator stylów/konfigurator.html
@@ -19,7 +19,7 @@
             </select></p>
         <p>Podaj rozmiar czcionki w procentach, np. 200%<br><input type="number" id="font-size" value="100">%</p>
         <p>Czy rysunek ma mieć ramkę?<br><input type="checkbox" id="border" checked="true">Rysuj ramkę</p>
-        <p>Jaki jest typ punktora listy?<br><input type="radio" id="dysk" name="list-style">Dysk<br><input type="radio" id="kwadrat" name="list-style">Kwadrat<br><input type="radio" id="okrag" name="list-style">Okrąg</p>
+        <p>Jaki jest typ punktora listy?<br><input type="radio" id="disc" name="list-style">Dysk<br><input type="radio" id="square" name="list-style">Kwadrat<br><input type="radio" id="circle" name="list-style">Okrąg</p>
     </div>
 
     <div id="blok_prawy">
