--- a/Egzaminy/E03JS - pomocnik/kolory.html
+++ b/Egzaminy/E03JS - pomocnik/kolory.html
@@ -30,13 +30,13 @@
 
         <table>
             <tr>
-                <td colspan="4">Kolor główny</td>
+                <td colspan="4" id="td1">Kolor główny</td>
             </tr>
             <tr>
-                <td>kolor 1</td>
-                <td>kolor 2</td>
-                <td>kolor 3</td>
-                <td>kolor 4</td>
+                <td id="td2">kolor 1</td>
+                <td id="td3">kolor 2</td>
+                <td id="td4">kolor 3</td>
+                <td id="td5">kolor 4</td>
             </tr>
         </table>
     </div>
