--- a/Egzaminy/E03JS - pomocnik/kolory.html
+++ b/Egzaminy/E03JS - pomocnik/kolory.html
@@ -25,7 +25,7 @@
     <div id="blok-glowny">
         <h2>Podaj składową H koloru w kodzie HSL</h2>
         <p>0 do 30 czerwienie, do 60 żółcie, do 150 zielenie, do 250 niebieskie, do 360 fiolet i purpura</p>
-        <img src="zad2/kolory.jpg" alt="Przestrzeń barw HSL"><br>
+        <img src="kolory.jpg" alt="Przestrzeń barw HSL"><br>
         <input type="number" id="h" max="360" min="0" placeholder="0 - 360"> <button>Generuj paletę</button>
 
         <table>
