--- a/Egzaminy/E04JS - usługi informatyczne zielony/kontakt.html
+++ b/Egzaminy/E04JS - usługi informatyczne zielony/kontakt.html
@@ -17,31 +17,47 @@
   <div id="glowny">
     <div id="kol2">
       <h3>Formularz kontaktowy</h3>
-      <table>
-        <tr>
-          <td><label for="imie">Imię: </label></td>
-          <td><input type="text" id="imie"></td>
-        </tr>
-        <tr>
-          <td><label for="nazwisko">Nazwisko: </label></td>
-          <td><input type="text" id="nazwisko"></td>
-        </tr>
-        <tr>
-          <td><label for="email">E-mail: </label></td>
-          <td><input type="text" id="email"></td>
-        </tr>
-        <tr>
-          <td>Usługa: </td>
-          <td><select>
-            <option value=""></option>
-          </select></td>
-        </tr>
-      </table>
+      <form>
+        <table>
+          <tr>
+            <td><label for="imie">Imię: </label></td>
+            <td><input type="text" id="imie"></td>
+          </tr>
+          <tr>
+            <td><label for="nazwisko">Nazwisko: </label></td>
+            <td><input type="text" id="nazwisko"></td>
+          </tr>
+          <tr>
+            <td><label for="email">E-mail: </label></td>
+            <td><input type="text" id="email"></td>
+          </tr>
+          <tr>
+            <td>Usługa: </td>
+            <td><select id="usluga">
+              <option value="naprawa komputera">naprawa komputera</option>
+              <option value="odzyskiwanie danych">odzyskiwanie danych</option>
+              <option value="problemy z oprogramowaniem">problemy z oprogramowaniem</option>
+              <option value="konfiguracja sieci LAN">konfiguracja sieci LAN</option>
+              <option value="inne">inne</option>
+            </select></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><input type="checkbox" checked="checked" id="kopia"><label for="kopia">Wyślij kopię wiadomości</label></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><input type="reset" value="Resetuj"><br><input type="submit" value="Prześlij" onclick="aktywacja()"></td>
+          </tr>
+        </table>
+      </form>
+      <p id="wynik"></p>
     </div>
   </div>
   <div id="stopka">
     <p>Autor strony: <b>Fabian Latosiński 2P_1</b></p>
   </div>
 </main>
+<script src="main.js"></script>
 </body>
 </html>
