--- a/Egzaminy/E04JS - usługi informatyczne zielony/kontakt.html
+++ b/Egzaminy/E04JS - usługi informatyczne zielony/kontakt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Pogotowie komputerowe</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.png">
 </head>
 <body>
 <main>
@@ -47,7 +48,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><input type="reset" value="Resetuj"><br><input type="submit" value="Prześlij" onclick="aktywacja()"></td>
+            <td><input type="reset" value="Resetuj" id="reset"><br><input type="submit" value="Prześlij" id="submit" onclick="aktywacja()"></td>
           </tr>
         </table>
       </form>
